# imessage-view

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SCHEMA.md  patch_base.py  patch_main.py  patch_mod.py  patch_queries.py  test_import.sh
.sisyphus/: FINAL_VERIFICATION_REPORT.md  boulder.json
.sisyphus/evidence/: task-1-cargo-check.txt  task-1-cli-help.txt  task-1-htmx-vendored.txt  task-2-db-copy.txt  task-2-poc-output.txt  task-3-fts-tokenizer.txt  task-3-schema.txt  task-4-contacts.txt  task-4-normalization.txt  task-8-all-routes.txt  task-8-server-home.txt  task-8-static-files.txt
.sisyphus/notepads/imessage-search/: learnings.md
.sisyphus/plans/: attachment-recovery.md  icloud-recovery.md  imessage-search.md  imessage-ui-redesign.md
examples/: test_copy.rs  test_generate_text.rs
src/: main.rs  state.rs
src/db/: mod.rs  queries.rs  schema.rs
src/import/: attachments.rs  contacts.rs  messages.rs  mod.rs
src/models/: mod.rs
src/recovery/: ios_backup.rs  mod.rs
src/search/: mod.rs
src/web/: attachments.rs  format.rs  mod.rs  pages.rs  partials.rs  recovery.rs
static/css/: style.css
templates/: analytics.html  attachments.html  base.html  contact_insights.html  conversation.html  index.html  recovery.html  search.html
templates/partials/: conversation_attachments.html  conversation_insights.html  conversation_panel.html  conversations.html  messages.html  search_results.html  unified_search.html  unified_search_more.html
