[package]
name = "imessage-db-port"
version = "0.1.0"
edition = "2021"

[dependencies]
imessage-database = "3.3.2"
rusqlite = { version = "=0.38.0", features = ["bundled"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["attachment", "file-stream"] }
axum-htmx = "0.8"
askama = "0.15"
askama_web = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
glob = "0.3"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"
